--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_PORT: 8000
-POSTGRES_CONNECTION_STRING: str
-BASE_URL: str
-API_KEY: "https://capashi.dev-1.python-labs.ru"
+APP_PORT=8000
+POSTGRES_CONNECTION_STRING=postgresql+asyncpg://user:password@localhost:5432/service
+BASE_URL=https://capashi.dev-1.python-labs.ru
+API_KEY=px64kgKjUAwnRlHuGuE5mk0zF7gOkYHa6L12qTdjzTg
