--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.1",
+    "asyncpg>=0.31.0",
     "dependency-injector>=4.48.3",
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
+    "psycopg2>=2.9.11",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.45",
-    "uvicorn>=0.40.0",
+    "unicorn>=2.1.4",
 ]
